! Fix error overlap text

--- a/Natours/sass/components/_composition.scss
+++ b/Natours/sass/components/_composition.scss
@@ -35,6 +35,6 @@
     }
 
     &:hover &__photo:not(:hover) {
-        transform: scale(.9);
+        transform: scale(.95);
     }
 }
